--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "^5.0.0",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
+    "angularfire2": "^5.0.0-rc.4",
+    "firebase": "4.8.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
