--- a/package.json
+++ b/package.json
@@ -12,27 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/cdk": "^5.0.4",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/material": "^5.0.4",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
-    "@ngx-translate/core": "^9.1.0",
+    "@angular/forms": "^5.2.1",
+    "@angular/http": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.1",
+    "@angular/platform-browser-dynamic": "^5.2.1",
+    "@angular/router": "^5.2.1",
+    "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
-    "angularfire2": "^5.0.0-rc.4",
+    "@types/lodash": "^4.14.93",
+    "angularfire2": "^5.0.0-rc.5-next",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
-    "firebase": "^4.8.2",
+    "firebase": "^4.9.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
@@ -41,12 +43,12 @@
   },
   "devDependencies": {
     "@angular/cli": "1.7.0-beta.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
+    "@angular/compiler-cli": "^5.2.1",
+    "@angular/language-service": "^5.2.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
