--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.93",
     "angularfire2": "^5.0.0-rc.5-next",
     "body-parser": "^1.18.2",
+    "bson-ext": "^2.0.0",
     "compression": "^1.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
@@ -36,6 +37,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "method-override": "^2.3.10",
+    "mongodb": "^3.0.6",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.6",
