--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.2",
+    "@angular/animations": "^5.2.10",
     "@angular/cdk": "^5.1.0",
-    "@angular/common": "^5.2.2",
-    "@angular/compiler": "^5.2.2",
-    "@angular/core": "^5.2.2",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
     "@angular/flex-layout": "^2.0.0-beta.10-4905443",
-    "@angular/forms": "^5.2.2",
-    "@angular/http": "^5.2.2",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
     "@angular/material": "^5.1.0",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/router": "^5.2.2",
-    "@ngx-translate/core": "^9.1.1",
-    "@ngx-translate/http-loader": "^2.0.1",
-    "@types/lodash": "^4.14.93",
-    "angularfire2": "^5.0.0-rc.5-next",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "@types/lodash": "^4.14.107",
+    "angularfire2": "^5.0.0-rc.7.0-next",
     "body-parser": "^1.18.2",
     "bson-ext": "^2.0.0",
-    "compression": "^1.7.1",
-    "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "firebase": "^4.9.0",
+    "compression": "^1.7.2",
+    "core-js": "^2.5.5",
+    "express": "^4.16.3",
+    "firebase": "^4.12.1",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "method-override": "^2.3.10",
     "mongodb": "^3.0.6",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.20"
+    "rxjs": "^5.5.10",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.0.29",
-    "@angular/cli": "1.7.0-beta.0",
-    "@angular/compiler-cli": "^5.2.2",
-    "@angular/language-service": "^5.2.2",
+    "@angular/cli": "1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.4.0",
