--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^2.0.1",
     "@types/lodash": "^4.14.107",
     "angularfire2": "^5.0.0-rc.7.0-next",
+    "assert": "^1.4.1",
     "body-parser": "^1.18.2",
     "bson-ext": "^2.0.0",
     "compression": "^1.7.2",
@@ -37,7 +38,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.5",
     "method-override": "^2.3.10",
-    "mongodb": "^3.0.6",
+    "mongodb": "^3.0.7",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.10",
