--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.10",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.4.0",
     "codelyzer": "^4.1.0",
+    "gulp-typescript": "^4.0.2",
     "jasmine-core": "~2.9.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -64,6 +66,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "^2.8.3"
   }
 }
