testing with express server in typescript

--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "@angular/router": "^5.2.10",
     "@ngx-translate/core": "^9.1.0",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@types/body-parser": "^1.17.0",
+    "@types/compression": "0.0.36",
+    "@types/express": "^4.11.1",
+    "@types/helmet": "0.0.37",
     "@types/lodash": "^4.14.107",
+    "@types/method-override": "0.0.31",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^9.4.7",
     "angularfire2": "^5.0.0-rc.7.0-next",
     "assert": "^1.4.1",
     "body-parser": "^1.18.2",
